--- a/CNPM_SE_12/CNPM_SE_12.csproj
+++ b/CNPM_SE_12/CNPM_SE_12.csproj
@@ -59,15 +59,59 @@
     <Compile Include="BLL\QL_Account_BLL.cs" />
     <Compile Include="BLL\QL_Items_BLL.cs" />
     <Compile Include="BLL\QL_User_BLL.cs" />
+    <Compile Include="Cons.cs" />
+    <Compile Include="DTO\Account.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Category.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\cbb_Ctg.cs" />
+    <Compile Include="DTO\data_Order.cs" />
     <Compile Include="DTO\DB_SE12.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_SE12.Context.tt</DependentUpon>
     </Compile>
+    <Compile Include="DTO\DB_SE12.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
     <Compile Include="DTO\DB_SE12.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DB_SE12.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Detail_Order.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Item.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Link.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Order.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\QL_Payment.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\QL_WDay.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Salary.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\sysdiagram.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Type_Account.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\User.cs">
+      <DependentUpon>DB_SE12.tt</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -77,14 +121,62 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\FormManager.cs">
+    <Compile Include="View\Account_Manager.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Account_Manager.Designer.cs">
+      <DependentUpon>Account_Manager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AU_Category.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AU_Category.Designer.cs">
+      <DependentUpon>AU_Category.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AU_Items.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AU_Items.Designer.cs">
+      <DependentUpon>AU_Items.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Bill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Bill.Designer.cs">
+      <DependentUpon>Bill.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ChangePass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ChangePass.Designer.cs">
+      <DependentUpon>ChangePass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\CheckPoint.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\CheckPoint.Designer.cs">
+      <DependentUpon>CheckPoint.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FB_Manager.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\FB_Manager.Designer.cs">
+      <DependentUpon>FB_Manager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FB_User.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\FB_User.Designer.cs">
+      <DependentUpon>FB_User.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormManager.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\FormManager.Designer.cs">
       <DependentUpon>FormManager.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Login.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
@@ -101,6 +193,18 @@
     <Compile Include="View\QL_Items.Designer.cs">
       <DependentUpon>QL_Items.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\QL_User.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\QL_User.Designer.cs">
+      <DependentUpon>QL_User.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\QuanLyBill.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\QuanLyBill.Designer.cs">
+      <DependentUpon>QuanLyBill.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -110,6 +214,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EntityDeploy Include="DTO\DB_SE12.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>DB_SE12.Designer.cs</LastGenOutput>
@@ -131,11 +238,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="DTO\DB_SE12.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DB_SE12.edmx</DependentUpon>
       <LastGenOutput>DB_SE12.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DTO\DB_SE12.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DB_SE12.edmx</DependentUpon>
+      <LastGenOutput>DB_SE12.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
