--- a/CNPM_SE_12/CNPM_SE_12.csproj
+++ b/CNPM_SE_12/CNPM_SE_12.csproj
@@ -113,10 +113,10 @@
     <Compile Include="DTO\User.cs">
       <DependentUpon>DB_SE12.tt</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -180,12 +180,6 @@
     <Compile Include="View\FormManager.Designer.cs">
       <DependentUpon>FormManager.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Main.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -210,7 +204,7 @@
     <Compile Include="View\QuanLyBill.Designer.cs">
       <DependentUpon>QuanLyBill.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -223,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\QL_Items.resx">
+      <DependentUpon>QL_Items.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="DTO\DB_SE12.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
