--- a/CNPM_SE_12/CNPM_SE_12.csproj
+++ b/CNPM_SE_12/CNPM_SE_12.csproj
@@ -150,12 +150,6 @@
     <Compile Include="View\Bill.Designer.cs">
       <DependentUpon>Bill.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\ChangePass.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\ChangePass.Designer.cs">
-      <DependentUpon>ChangePass.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\CheckPoint.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -204,6 +198,21 @@
     <Compile Include="View\QuanLyBill.Designer.cs">
       <DependentUpon>QuanLyBill.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Account_Manager.resx">
+      <DependentUpon>Account_Manager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AU_Category.resx">
+      <DependentUpon>AU_Category.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\AU_Items.resx">
+      <DependentUpon>AU_Items.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Bill.resx">
+      <DependentUpon>Bill.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\FB_Manager.resx">
+      <DependentUpon>FB_Manager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\QL_Items.resx">
       <DependentUpon>QL_Items.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\QuanLyBill.resx">
+      <DependentUpon>QuanLyBill.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="DTO\DB_SE12.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
