--- a/CNPM_SE_12/CNPM_SE_12.csproj
+++ b/CNPM_SE_12/CNPM_SE_12.csproj
@@ -186,6 +186,12 @@
     <Compile Include="View\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\QL_Item.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\QL_Item.Designer.cs">
+      <DependentUpon>QL_Item.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\QL_Items.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -235,6 +241,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\QL_Item.resx">
+      <DependentUpon>QL_Item.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\QL_Items.resx">
       <DependentUpon>QL_Items.cs</DependentUpon>
