--- a/CNPM_SE_12/App.config
+++ b/CNPM_SE_12/App.config
@@ -7,11 +7,10 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings><add name="SE_12Entities" connectionString="metadata=res://*/DTO.DB_SE12.csdl|res://*/DTO.DB_SE12.ssdl|res://*/DTO.DB_SE12.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.95.197.121,9696;initial catalog=SE_12;user id=DACNPM;password=khoa18@itf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="SE_12Entities1" connectionString="metadata=res://*/DTO.DB_SE12.csdl|res://*/DTO.DB_SE12.ssdl|res://*/DTO.DB_SE12.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.95.197.121,9696;initial catalog=SE_12;user id=DACNPM;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<connectionStrings><add name="SE_12Entities" connectionString="metadata=res://*/DTO.DB_SE12.csdl|res://*/DTO.DB_SE12.ssdl|res://*/DTO.DB_SE12.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.95.197.121,9696;initial catalog=SE_12;user id=DACNPM;password =khoa18@itf;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
