--- a/CNPM_SE_12/CNPM_SE_12.csproj
+++ b/CNPM_SE_12/CNPM_SE_12.csproj
@@ -112,6 +112,7 @@
     <Compile Include="DTO\User.cs">
       <DependentUpon>DB_SE12.tt</DependentUpon>
     </Compile>
+    <Compile Include="HassPass.cs" />
     <Compile Include="View\ChangePass_NV.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -125,7 +126,7 @@
       <DependentUpon>Chart_Payment.cs</DependentUpon>
     </Compile>
     <Compile Include="View\CreateAccount.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\CreateAccount.Designer.cs">
       <DependentUpon>CreateAccount.cs</DependentUpon>
@@ -203,12 +204,6 @@
     <Compile Include="View\QL_Item.Designer.cs">
       <DependentUpon>QL_Item.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\QL_Items.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\QL_Items.Designer.cs">
-      <DependentUpon>QL_Items.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\QL_User.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -264,9 +259,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\QL_Item.resx">
       <DependentUpon>QL_Item.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\QL_Items.resx">
-      <DependentUpon>QL_Items.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\QL_User.resx">
       <DependentUpon>QL_User.cs</DependentUpon>
